--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta property="og:title" content="송수용 - 프로필 링크" />
-  <meta property="og:description" content="저의 포트폴리오 링크입니다." />
+  <meta property="og:title" content="백엔드개발자 송수용 - 프로필 링크 페이지" />
+  <meta property="og:description" content="저의 프로필 링크입니다. 애자일하게 작업하고, 성과를 냈었던 경험을 담았습니다." />
   <meta property="og:image" content="송수용 백엔드이력서.png" />
   <title>송수용 - 프로필 링크</title>
   <style>
