--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       </a>
       <a target="_blank" href="https://drive.google.com/file/d/1vKXXHboiF39D8OdandIZRlAVe4ggnONb/view">
         <div class="name">개발자이력서</div>
-        <div class="desc">기획과 UX를 고려하고<br>클린코드에 관심이 많은 개발자입니다.</div>
+        <div class="desc">기획과 UX를 고려하고<br>클린코드에 관심이 많은<br> 개발자입니다.</div>
         <div class="btn">바로가기</div>
       </a>
       <a target="_blank" href="https://drive.google.com/file/d/1vKXXHboiF39D8OdandIZRlAVe4ggnONb/view">
