--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="og:title" content="백엔드개발자 송수용 - 프로필 링크 페이지" />
   <meta property="og:description" content="저의 프로필링크입니다. 애자일하게 작업하고, 성과를 냈었던 경험을 담았습니다." />
-  <meta property="og:image" content="송수용백엔드이력서.png"/>
+  <meta property="og:image" content="하임로고.png"/>
   <title>송수용 - 프로필링크</title>
   <style>
       @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
@@ -176,7 +176,7 @@
       </a>
       <a target="_blank" href="https://drive.google.com/file/d/1vKXXHboiF39D8OdandIZRlAVe4ggnONb/view">
         <div class="name">개발자이력서</div>
-        <div class="desc">기획과 UX를 고려하고<br>클린코드에 관심이 많은<br> 개발자입니다.</div>
+        <div class="desc">기획과 UX를 고려하고<br>클린코드에 관심이 많은<br>개발자입니다.</div>
         <div class="btn">바로가기</div>
       </a>
       <a target="_blank" href="https://drive.google.com/file/d/1vKXXHboiF39D8OdandIZRlAVe4ggnONb/view">
