--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta property="og:title" content="백엔드개발자 송수용 - 프로필 링크 페이지" />
-  <meta property="og:description" content="저의 프로필링크입니다. 애자일하게 작업하고, 성과를 냈었던 경험을 담았습니다." />
+  <meta property="og:title" content="백엔드개발자 송수용 링크 모음" />
+  <meta property="og:description" content="애자일하게 작업하고, 성과를 냈었던 경험을 담았습니다." />
   <meta property="og:image" content="송수용백엔드이력서.png"/>
-  <title>송수용 - 프로필링크</title>
+  <title>송수용 - 포트폴리오 링크 모음</title>
   <style>
       @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
     * {
