--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="og:title" content="백엔드개발자 송수용 링크 모음" />
   <meta property="og:description" content="애자일하게 작업하고, 성과를 냈었던 경험을 담았습니다." />
-  <meta property="og:image" content="하임로고.png"/>
+  <meta property="og:image" content="포트폴리오로고.png"/>
   <title>송수용 - 포트폴리오 링크 모음</title>
   <style>
       @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
