--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html>
 
 <head>
-  <!-- 웹페이지 보이지는 않지만, 필요한 설정을 해두는 곳이에요.
-             우리가 집을 위해 미리 생각 해놓은 것을 적어두는 곳이라고 할 수 있죠!-->
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta property="og:title" content="백엔드개발자 송수용 링크 모음" />
+  <meta property="og:title" content="백엔드개발자|송수용 링크모음" />
   <meta property="og:description" content="애자일하게 작업하고, 성과를 냈었던 경험을 담았습니다." />
-  <meta property="og:image" content="포트폴리오로고.png"/>
+  <meta property="og:image" content="portfolioLogo.png" />
   <title>송수용 - 포트폴리오 링크 모음</title>
   <style>
-      @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
+    @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
+
     * {
       font-family: "Pretendard", serif;
     }
@@ -88,7 +87,7 @@
       color: #84827D;
     }
 
-    .sns1 { 
+    .sns1 {
       background: linear-gradient(287.96deg, rgba(0, 0, 0, 0.16) 15.1%, rgba(0, 0, 0, 0) 83.32%), #02C3BD;
       color: #FFFFFF;
     }
